--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
+    "react-responsive": "^10.0.0",
     "sharp": "^0.33.4",
     "yup": "^1.4.0"
   },
