--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.25.1",
     "sharp": "^0.33.4",
     "yup": "^1.4.0"
   },
